# hypercoder-test

./: .env.example  AGENTS.md  Cargo.toml  GUARDRAILS.md  README.md  docker-compose.yml  middleware.ts  next.config.js  spec.json  tailwind.config.ts
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/(app)/: layout.tsx  loading.tsx
app/(app)/dashboard/: loading.tsx
app/(app)/habits/: page.tsx
app/(app)/habits/new/: page.tsx
app/(app)/summary/: page.tsx
app/api/auth/logout/: route.ts
app/api/auth/reset-password/: route.ts
app/api/habits/: route.ts
app/api/habits/[id]/: route.ts
app/api/me/: route.ts
app/api/summary/weekly/: route.ts
app/auth/: actions.ts
app/auth/callback/: route.ts
app/login/: page.tsx
app/signup/: page.tsx
backend/: Cargo.toml
backend/src/: config.rs  main.rs  router.rs
backend/src/auth/: handlers.rs  mod.rs
backend/src/db/: mod.rs  schema.rs
backend/src/handlers/: activity.rs  items.rs  mod.rs  widgets.rs  workspace.rs
backend/src/ws/: handlers.rs  mod.rs
components/: confirm-dialog.tsx  empty-state.tsx  nav.tsx  theme-provider.tsx  theme-toggle.tsx  weekly-grid.tsx
frontend/: package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: theme.ts
frontend/src/lib/api/: items.ts  ws.ts
frontend/src/lib/components/: ActivityFeed.svelte  ItemManager.svelte
frontend/src/lib/stores/: auth.svelte.ts
lib/: habits.ts  streaks.ts
lib/supabase/: client.ts  server.ts
supabase/migrations/: 0001_init.sql
(+10 files in other folders)
