[workspace]
members = ["backend"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
surrealdb = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = "0.5"
jsonwebtoken = "9.0"
anyhow = "1.0"
validator = { version = "0.18", features = ["derive"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"