[package]
name = "bentoboard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true, features = ["ws", "headers"] }
serde = { workspace = true }
serde_json = "1.0"
surrealdb = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
tower-governor = "0.10"
thiserror = "1.0"

[dev-dependencies]
tower-test = "0.4"
hyper = "1.0"
requwest = { version = "0.11", features = ["json"] }